# Translate-XV3

./: .dockerignore  .replit  DEVELOPER_GUIDE.md  Dockerfile  README_API.md  README_groq_batch.md  SUMMARY.md  api_config.py  bot_handlers.py  config.py  daily_usage.json  database_manager.py  deep_translator_wrapper.py  document_generator.py  example_usage.py  file_handlers.py  groq_batch_translator.py  groq_config.py  local_translator.py  main.py  multi_api_manager.py  pyproject.toml  render.yaml  replit.md  requirements.txt  test_basic_structure.py  test_groq_batch.py  translator.py  ui_config.py  utils.py
attached_assets/: Pasted-25-09-01-23-37-57-947-telegram-ext-Application-INFO-Application-is-stopping-This-might-take-a-1756769935889_1756769935890.txt
fonts/: README.md
